K8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sentinelops-ingress
  namespace: sentinelops

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          ###################################################
          # Backend
          ###################################################

          - path: /api

            pathType: Prefix

            backend:

              service:

                name: backend-service

                port:

                  number: 5000

          ###################################################
          # Frontend
          ###################################################

          - path: /

            pathType: Prefix

            backend:

              service:

                name: frontend-service

                port:

                  number: 80
